force-app/main/default/objects/Transformation_Record__mdt/Transformation_Record__mdt.object-meta.xml
<CustomObject>
    <label>Transformation Record</label>
    <pluralLabel>Transformation Records</pluralLabel>
</CustomObject>