force-app/main/default/objects/Transformation_Record__mdt/fields/conditional__c.field-meta.xml
<CustomField>
    <fullName>conditional__c</fullName>
    <inlineHelpText>Only create this record if this rule is satisfied - always in the format of field=value, if you need more complicated logic please create and check against a formula field. Example: Has_Spouse__c=Yes</inlineHelpText>
    <label>Only create when</label>
    <length>255</length>
    <type>Text</type>
</CustomField>