force-app/main/default/objects/Transformation_Record__mdt/fields/External_Id_Field__c.field-meta.xml
<CustomField>
    <fullName>External_Id_Field__c</fullName>
    <description>This is used to link records via lookups, without this they will not be linked when transformed</description>
    <inlineHelpText>This is used to link records via lookups, without this they will not be linked when transformed</inlineHelpText>
    <label>External Id Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>