force-app/main/default/objects/Transformation_Record__mdt/fields/Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Record_Type__c</fullName>
    <description>The API Name of the record type to use when creating this record.</description>
    <inlineHelpText>The API Name of the record type to use when creating this record.</inlineHelpText>
    <label>Record Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>