force-app/main/default/objects/Transformation_Record__mdt/fields/Share_Files__c.field-meta.xml
<CustomField>
    <fullName>Share_Files__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If ticked, any files shared with the source record will be shared with this record once created.</inlineHelpText>
    <label>Share Files</label>
    <type>Checkbox</type>
</CustomField>