force-app/main/default/objects/Transformation_Record__mdt/fields/SObject__c.field-meta.xml
<CustomField>
    <fullName>SObject__c</fullName>
    <label>SObject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>