force-app/main/default/objects/Transformation_Record__mdt/fields/Transformation_Set__c.field-meta.xml
<CustomField>
    <fullName>Transformation_Set__c</fullName>
    <label>Transformation Set</label>
    <referenceTo>Transformation_Set__mdt</referenceTo>
    <relationshipLabel>Transformation Records</relationshipLabel>
    <relationshipName>Transformation_Records</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>